--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -9,6 +9,6 @@ phlow: # replace this with your info
   name: "Phlow"
   siterole: "webmaster, developer, copywriter, designer"
   uri: http://phlow.de/
-  email:
-  twitter: "@phlow"
+#  email:
+#  twitter: "@phlow"
 # you can add more authors here
